# gubs

./: LICENSE  README.md  gubs.cabal  gubs.hs  stack.yaml
examples/: gubs.hs  ugo1.cs  ugo2.cs  ugo3.cs
examples/hosa/: append-size.cs  append-time.cs  appendtwice-size.cs  appendtwice-time.cs  dfs-flatten-size.cs  dfs-flatten-time.cs  fmap_tree-size.cs  fmap_tree-time.cs  insertsort-size.cs  insertsort-time.cs  prependall-size.cs  prependall-time.cs  product-size.cs  product-time.cs  recscheme-size.cs  recscheme-time.cs  rev-dl-contrived-size.cs  rev-dl-contrived-time.cs  rev-dl-size.cs  rev-dl-time.cs  reverse-size.cs  reverse-time.cs
examples/tpdb/Frederiksen_Glenstrup/: add.cs  addlists.cs  anchored.cs  append.cs  decrease.cs  deeprev_typed.cs  duplicate.cs  evenodd.cs  fold.cs  game.cs  list.cs  lte.cs  map0.cs  member.cs  mergelists.cs  naiverev.cs  nestdec.cs  nolexicord.cs  ordered.cs  ordered_better.cs  overlap.cs  revapp.cs  select.cs
examples/tpdb/Frederiksen_Others/: add.cs  boolprog.cs  disj2_typed.cs  div2.cs  dup1_typed.cs  dup2_typed.cs  eq.cs  ex6.cs  gexgcd.cs  match.cs  ocall-safe.cs  ocall-unsafe.cs  oddeven.cs  permut.cs  strmatch.cs  thetrickSize.cs
examples/tpdb/hoca/: dfs-flatten.cs  flatten.cs  foldsum.cs  id.cs  mappplus.cs  rev-dl.cs  rev-fletf.cs  rev-foldl.cs  sum.cs
examples/tpdb/raML/: appendAll.raml.cs  clevermmult.raml.cs  dyade.raml.cs  rationalPotential.raml.cs  subtrees.raml.cs
gubs/: Main.hs
src/: GUBS.hs
src/GUBS/: Algebra.hs  CS.hs  Constraint.hs  ConstraintSystem.hs  Expression.hs  Interpretation.hs  MaxPolynomial.hs  Polynomial.hs  Solve.hs  Solver.hs  Term.hs  Utils.hs
src/GUBS/Solve/: Incremental.hs  SCC.hs  SMT.hs  Simple.hs  Simplify.hs  Strategy.hs
src/GUBS/Solver/: Class.hs  Formula.hs  MiniSMT.hs  SMTLib.hs  ZThree.hs
src/GUBS/Solver/SMTLib2/: Pipe.hs
