name:                gubs
version:             0.2.0.0
license:             MIT
license-file:        LICENSE
author:              Martin Avanzini
maintainer:          martin.avanzini@uibk.ac.at
category:            Logic
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules: GUBS.CS
                   GUBS.Polynomial
                   GUBS.Expression
                   GUBS.Interpretation
                   GUBS.Solve
                   GUBS.Solve.Strategy
                   GUBS.Solve.SMT
                   GUBS.Solve.SCC
                   GUBS.Solve.Simplify                                      
                   GUBS.Solver                               
                   GUBS.Solver.Class
                   GUBS.Solver.SMTLib
                   GUBS.Solver.MiniSMT
                   GUBS.Utils
                   GUBS
  other-extensions:    
  build-depends:       base >= 4.8 && <4.9,
                       containers >=0.5 && <0.6,
                       smtlib2 >=0.3 && < 0.4,
                       mtl >=2.2 && <2.3,
                       monad-trace >=0.1 && <0.2,
                       transformers >=0.4 && <0.5,
                       bytestring     >=0.10 && <0.11,
                       process        >=1.2 && <1.3,
                       temporary      >=1.2 && <1.3,
                       ansi-wl-pprint >= 0.6 && < 0.7,
                       multiset       >= 0.3 && < 0.4,
                       parsec >= 3.1 && < 3.2                                              
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  StandaloneDeriving,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       GeneralizedNewtypeDeriving,
                       ConstraintKinds,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       RecordWildCards,
                       ViewPatterns,
                       PatternSynonyms,
                       PatternGuards,
                       TypeFamilies
                         