name:                gubs
version:             0.2.0.0
license:             MIT
license-file:        LICENSE
author:              Martin Avanzini
maintainer:          martin.avanzini@uibk.ac.at
category:            Logic
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules: GUBS.Algebra
                   GUBS.Term
                   GUBS.Constraint
                   GUBS.ConstraintSystem
                   GUBS.Polynomial
                   GUBS.MaxPolynomial                   
                   GUBS.Expression
                   GUBS.Interpretation
                   GUBS.Solve
                   GUBS.Solve.Strategy
                   GUBS.Solve.SMT
                   GUBS.Solve.SCC
                   GUBS.Solve.Simplify                                      
                   GUBS.Solver                               
                   GUBS.Solver.Class
                   GUBS.Solver.Formula                   
                   GUBS.Solver.SMTLib
                   GUBS.Solver.MiniSMT
                   GUBS.Utils
                   GUBS
  other-extensions:    
  build-depends:       base,
                       containers,
                       smtlib2,
                       smtlib2-pipe,
                       smtlib2-debug,                       
                       mtl,
                       monad-trace,
                       transformers,
                       bytestring,
                       process,
                       temporary,
                       ansi-wl-pprint,
                       multiset,
                       time,
                       parsec 
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  StandaloneDeriving,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       GeneralizedNewtypeDeriving,
                       ConstraintKinds,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       RecordWildCards,
                       ViewPatterns,
                       PatternSynonyms,
                       PatternGuards,
                       TypeFamilies,
                       TupleSections,
                       GADTs
                         